--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^8.10.0",
     "import": "^0.0.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
